Fixed post items getting cut off on iOS (#17189)
- This PR is a fixed version of #16765. I took a different approach for this to work around some of the issues that were found after that one got merged. In that PR's description, I mentioned that there were multiple scroll areas for the post editor that were somehow displaying at different sizes. The reason appears to be that the CSS vh unit includes some areas that are obscured by Safari's toolbars, since those toolbars may disappear if the <body> element is scrolled. However, since Ghost's admin area uses <div> elements for all scrolling, those toolbars never disappear, and so the space becomes unused. We can work around this by changing to the CSS dvh unit, which always represents the current size of the viewport.
- Most pages have enough padding that the vh unit doesn't cause any problems. In this PR, I've changed it for two places that do break, the post editor and the post settings menu (which can get the "Delete" button cut off). I also included the sidebar width fix from the previous PR.
- Video of the fixed behavior (compare with the old behavior video linked in #16765): https://github.com/TryGhost/Ghost/assets/12983479/eceda43a-23c3-4cf6-9de2-8eda54a98100

--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -45,7 +45,7 @@
 
 .settings-menu-container {
     z-index: 999;
-    height: 100vh;
+    height: 100dvh;
     min-width: 420px;
     overflow-x: visible;
     overflow-y: auto;
@@ -67,6 +67,19 @@
         -30.1px 0 24.1px rgba(0, 0, 0, 0.01),
         -100px 0 80px rgba(0, 0, 0, 0.02)
     ;
+    }
+}
+
+@media (max-width: 800px) {
+    .settings-menu-container {
+        padding-bottom: 64px;
+    }
+}
+
+@media (max-width: 500px) {
+    .settings-menu-container {
+        width: 100vw;
+        min-width: 100vw;
     }
 }
 
@@ -93,7 +106,14 @@
     top: auto;
     right: auto;
     bottom: auto;
-    height: 100vh;
+    height: 100dvh;
+}
+
+@media (max-width: 500px) {
+    .settings-menu-container .settings-menu-pane {
+        width: 100vw;
+        min-width: 100vw;
+    }
 }
 
 /* Header
